--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         </div>
 
         <div class="control">
-            <img src="./img/icon1.png" alt="control1">
-            <img src="./img/icon5.png" alt="control5">
-            <img src="./img/icon6.png" alt="control6">
-            <img src="./img/icon3.png" alt="control3">
-            <img src="./img/icon2.png" alt="control2">
-            <img src="./img/icon4.png" alt="control4">
-            <img src="./img/icon7.png" alt="control7">
-            <img src="./img/icon8.png" alt="control8">
-            <img src="./img/icon9.png" alt="control9">
-            <img src="./img/icon10.png" alt="control10">
+            <img src="img/icon1.png" alt="control1">
+            <img src="img/icon5.png" alt="control5">
+            <img src="img/icon6.png" alt="control6">
+            <img src="img/icon3.png" alt="control3">
+            <img src="img/icon2.png" alt="control2">
+            <img src="img/icon4.png" alt="control4">
+            <img src="img/icon7.png" alt="control7">
+            <img src="img/icon8.png" alt="control8">
+            <img src="img/icon9.png" alt="control9">
+            <img src="img/icon10.png" alt="control10">
         </div>
     </header>
 
